# odis-web

./: Cargo.toml  index.html
src/: js_fn.rs  main.rs
src/components/: checkbox.rs  download.rs  exploration.rs  graph.rs  svg_download.rs  table.rs
src/components/svg/: edge.rs  node.rs
